--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=4000
-MONGO_URI=mongodb+srv://mario:test1234@mernapp.ad5fpaw.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://navindu0315:wishmi02@cluster0.ie1ul0n.mongodb.net/?retryWrites=true&w=majority
 SECRET=ninjadojoshifuyoshimarioluigipeachbowser
+
+#wishmi02
